--- a/Model A - CNN.ipynb
+++ b/Model A - CNN.ipynb
@@ -143,7 +143,7 @@
     "        \"With shape = [patterns, features, entries, depth], depth can be null\"\n",
     "        \"and is assumed 1\"\n",
     "        \"----------------------------------------------------------------------\"\n",
-    "        \n",
+    "        stop = EarlyStopping(monitor='val_loss', patience = 20, mode='min', verbose=0)\n",
     "        patterns, num_features, num_entries, depth = x.shape\n",
     "        x = np.reshape(x, (patterns, num_features, num_entries, depth))\n",
     "        kf = KFold(n_splits = folds, shuffle = True, random_state = 777)\n",
@@ -191,7 +191,7 @@
     "                        metrics=['mae', 'mse'])\n",
     "\n",
     "            history = model.fit(X_train, y_train, epochs = epochs, batch_size = batchsize, \n",
-    "                            validation_data = (X_test, y_test))\n",
+    "                            validation_data = (X_test, y_test), callbacks=[stop])\n",
     "            \n",
     "            loss_train = np.sqrt(history.history['loss'])\n",
     "            loss_test = np.sqrt(history.history['val_loss'])\n",
@@ -284,8 +284,8 @@
    ],
    "source": [
     "k = 5\n",
-    "n_simulations = 2\n",
-    "epochs = 75\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train = np.zeros((n_simulations, epochs))\n",
     "sim_test = np.zeros((n_simulations, epochs))\n",
@@ -393,7 +393,6 @@
     "              epochs = epochs_prune,\n",
     "              verbose = 1,\n",
     "              callbacks = callbacks)\n",
-    "    #           validation_data = (x_val, y_val))\n",
     "\n",
     "    clear_output()\n",
     "    final_model = sparsity.strip_pruning(new_pruned_model)\n",
@@ -403,7 +402,7 @@
     "    \n",
     "    return new_pruned_model\n",
     "\n",
-    "prune(model)"
+    "prune(model_best)"
    ]
   },
   {
@@ -422,10 +421,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "A = np.array([25.17,23.41,62.85,21.60,19.73])\n",
-    "np.mean(A)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
