--- a/Model B - LSTM.ipynb
+++ b/Model B - LSTM.ipynb
@@ -121,7 +121,7 @@
     "    \"Then returns a fully trained and tested model using the\"\n",
     "    \"k-fold cross validation technique \"\n",
     "    \"---------------------------------------------------------\"\n",
-    "    \n",
+    "    stop = EarlyStopping(monitor='val_loss', patience = 20, mode='min', verbose=0)\n",
     "    training_loss_fold = np.zeros((folds, epochs))\n",
     "    testing_loss_fold = np.zeros((folds, epochs))\n",
     "    \n",
@@ -156,7 +156,7 @@
     "        model.add(layers.Dense(1, activation='linear'))\n",
     "        model.compile(loss='mse', optimizer= 'adam', metrics=['mae', 'mse'])\n",
     "        history = model.fit(X_train, y_train, epochs = epochs, batch_size = batchsize, \n",
-    "                        validation_data = (X_test, y_test), verbose = 1)\n",
+    "                        validation_data = (X_test, y_test),callbacks=[stop], verbose = 1)\n",
     "        \n",
     "        \n",
     "        loss_train = np.sqrt(history.history['loss'])\n",
@@ -297,9 +297,9 @@
     }
    ],
    "source": [
-    "k = 2\n",
-    "n_simulations = 2\n",
-    "epochs = 30\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 128\n",
     "sim_train = np.zeros((n_simulations, epochs))\n",
     "sim_test = np.zeros((n_simulations, epochs))\n",
@@ -405,7 +405,7 @@
     "    \n",
     "    return new_pruned_model\n",
     "\n",
-    "prune(model)"
+    "prune(model_best)"
    ]
   },
   {
