--- a/Model C - CNN+LSTM.ipynb
+++ b/Model C - CNN+LSTM.ipynb
@@ -109,7 +109,7 @@
     "    \"Then returns a fully trained and tested model using the\"\n",
     "    \"k-fold cross validation technique \"\n",
     "    \"---------------------------------------------------------\"\n",
-    "#     stop = EarlyStopping(monitor='val_loss', patience = 20, mode='min', verbose=0)\n",
+    "    stop = EarlyStopping(monitor='val_loss', patience = 20, mode='min', verbose=0)\n",
     "    entries = 121\n",
     "    n_features = 7\n",
     "    patterns = len(X)\n",
@@ -151,9 +151,7 @@
     "        history = model.fit(X_train, y_train, epochs = epochs, \n",
     "                            validation_data = (X_test, y_test), \n",
     "                            batch_size = batchsize, \n",
-    "                            verbose = 1)  # callbacks=[stop] Only for early stopping\n",
-    "\n",
-    "#         e = len(history.history['loss']) Only for early stopping\n",
+    "                            verbose = 1, callbacks=[stop]) \n",
     "\n",
     "        loss_train = np.sqrt(history.history['loss'])\n",
     "        loss_test = np.sqrt(history.history['val_loss'])\n",
@@ -245,8 +243,8 @@
     }
    ],
    "source": [
-    "k = 2\n",
-    "n_simulations = 2\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
     "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train = np.zeros((n_simulations, epochs))\n",
