--- a/Model D - FFNN.ipynb
+++ b/Model D - FFNN.ipynb
@@ -115,7 +115,7 @@
     "    \"and is assumed 1\"\n",
     "    \"----------------------------------------------------------------------\"\n",
     "    kf = KFold(n_splits = folds, shuffle = True, random_state = 777)\n",
-    "\n",
+    "    stop = EarlyStopping(monitor='val_loss', patience = 20, mode='min', verbose=0)\n",
     "    training_loss_fold = np.zeros((folds, epochs))\n",
     "    testing_loss_fold = np.zeros((folds, epochs))\n",
     "\n",
@@ -160,7 +160,7 @@
     "                    metrics=['mae', 'mse'])\n",
     "        \n",
     "        history = model.fit(X_train, y_train, epochs = epochs, batch_size = batchsize, \n",
-    "                            validation_data = (X_test, y_test))\n",
+    "                            validation_data = (X_test, y_test), callbacks = [stop])\n",
     "            \n",
     "        loss_train = np.sqrt(history.history['loss'])\n",
     "        loss_test = np.sqrt(history.history['val_loss'])\n",
@@ -252,9 +252,9 @@
     }
    ],
    "source": [
-    "k = 2\n",
-    "n_simulations = 2\n",
-    "epochs = 50\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train = np.zeros((n_simulations, epochs))\n",
     "sim_test = np.zeros((n_simulations, epochs))\n",
@@ -379,7 +379,7 @@
     "    \n",
     "    return new_pruned_model\n",
     "\n",
-    "prune(model)"
+    "prune(model_best)"
    ]
   },
   {
