--- a/Model E - CNN (Location Models).ipynb
+++ b/Model E - CNN (Location Models).ipynb
@@ -140,7 +140,7 @@
     "        \"With shape = [patterns, features, entries, depth], depth can be null\"\n",
     "        \"and is assumed 1\"\n",
     "        \"----------------------------------------------------------------------\"\n",
-    "        \n",
+    "        stop = EarlyStopping(monitor='val_loss', patience = 20, mode='min', verbose=0)\n",
     "        patterns, num_features, num_entries, depth = x.shape\n",
     "        kf = KFold(n_splits = folds, shuffle = True, random_state = 777)\n",
     "        \n",
@@ -187,7 +187,7 @@
     "                        metrics=['mae', 'mse'])\n",
     "\n",
     "            history = model.fit(X_train, y_train, epochs = epochs, batch_size = batchsize, \n",
-    "                            validation_data = (X_test, y_test))\n",
+    "                            validation_data = (X_test, y_test),callbacks = [stop])\n",
     "            \n",
     "            loss_train = np.sqrt(history.history['loss'])\n",
     "            loss_test = np.sqrt(history.history['val_loss'])\n",
@@ -290,8 +290,8 @@
     "y_A = labels_train[location == 1]\n",
     "\n",
     "k = 5\n",
-    "n_simulations = 2\n",
-    "epochs = 50\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train_A = np.zeros((n_simulations, epochs))\n",
     "sim_test_A = np.zeros((n_simulations, epochs))\n",
@@ -444,9 +444,9 @@
     "X_B = image_train[location == 2]\n",
     "y_B = labels_train[location == 2]\n",
     "\n",
-    "k = 2\n",
-    "n_simulations = 2\n",
-    "epochs = 150\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train_B = np.zeros((n_simulations, epochs))\n",
     "sim_test_B = np.zeros((n_simulations, epochs))\n",
@@ -599,9 +599,9 @@
     "X_C = image_train[location == 3]\n",
     "y_C = labels_train[location == 3]\n",
     "\n",
-    "k = 2\n",
-    "n_simulations = 2\n",
-    "epochs = 400\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train_C = np.zeros((n_simulations, epochs))\n",
     "sim_test_C = np.zeros((n_simulations, epochs))\n",
@@ -754,9 +754,9 @@
     "X_D = image_train[location == 4]\n",
     "y_D = labels_train[location == 4]\n",
     "\n",
-    "k = 2\n",
-    "n_simulations = 2\n",
-    "epochs = 50\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train_D = np.zeros((n_simulations, epochs))\n",
     "sim_test_D = np.zeros((n_simulations, epochs))\n",
@@ -909,9 +909,9 @@
     "X_E = image_train[location == 5]\n",
     "y_E = labels_train[location == 5]\n",
     "\n",
-    "k = 2\n",
-    "n_simulations = 2\n",
-    "epochs = 50\n",
+    "k = 5\n",
+    "n_simulations = 5\n",
+    "epochs = 200\n",
     "batchsize = 64\n",
     "sim_train_E = np.zeros((n_simulations, epochs))\n",
     "sim_test_E = np.zeros((n_simulations, epochs))\n",
@@ -1086,27 +1086,6 @@
     "    return new_pruned_model\n",
     "\n",
     "prune(model_E_best)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25.609999999999996"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A = np.array([40.21, 29.48, 70.94, 31.36, 25.81])\n",
-    "np.mean(A)"
    ]
   },
   {
